[gd_scene load_steps=2 format=3 uid="uid://doyh5zau2t5kf2"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/MarginContainer/MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit Game"
